Introduce pre selections and fine tune pick card flow

--- a/dominion/dominion.ini
+++ b/dominion/dominion.ini
@@ -2,3 +2,7 @@
 available-property-cards=vararok,atepites,banya,boszorkany,falu,favago,fesztival,hivatalnok,kalandor,kancellar,kapolna,kem,kovacsmuhely,konyvtar,laboratorium,lakoma,muhely,piac,pince,polgarorseg,tanacsterem,tolvaj,tronterem,uzsoras
 available-score-cards=park,tartomany,hercegseg,birtok,atok
 available-credit-cards=rez,ezust,arany
+
+number-of-property-picks=10
+number-of-score-picks=3
+number-of-credit-picks=3
